navbar and container fixes, permanent gap

--- a/static/benchmarks/css/landing_page.sass
+++ b/static/benchmarks/css/landing_page.sass
@@ -2,10 +2,15 @@
 $brainscore_green: #45C676
 $brainscore_blue: #47B7DE
 
+//container to keep a fixed gap on all sizes
+.container.my_container
+  width: 95%
+  max-width: 1500px
 
 // navbar
 .navbar_updated
   height: 100px
+
 
 .navbar-item.social_icon
   padding: 10px 0 0 0
@@ -18,9 +23,14 @@ $brainscore_blue: #47B7DE
 .navbar-brand
   padding-top: 10px
 
+.container.my_container.nav-container
+  margin-left: 2.5%
+  margin-right: 2.5%
+  max-width: $fullhd - 60px
+
 
 // main body and components
-.container.main_body
+.container.my_container.main_body
   background-image: linear-gradient(0deg, #e8f4ea, white)
 
 .button.new_design
@@ -210,45 +220,25 @@ button.simple_button
   width: 100px
 
 
-// resizes text between 768-850px, to ensure head stays put.
-@media (max-width: 850px)
+// resizing past normal breakpoints, prevents large text and navbar overflow >fullhd
+@media (min-width: $fullhd)
+  .container.my_container.nav-container
+    margin: auto
   .text-default-small
-    width: 125%
-  .button.domain_button
     font-size: 100%
-    width: 20%
-    height: 20px
-  .button.tutorial_button
-    width: 70%
-    height: 35px
-  .button.hollow_button
-    width: 70%
 
-// resizes buttons between 850px and 1024 px
-@media (max-width: 1024px)
-  .button.benefit_button
-    margin: auto
-    width: 100%
-    height: 35px
-
-// resizes buttons between 1024px and 1215 px
-@media (max-width: 1215px)
-  .button.benefit_button
-    margin: auto
-    height: 35px
-
-
-//mobile styling (below 1087)
-@media (max-width: 1087px)
-  .column.left_side
-    margin-top: 0
-    padding-left: 6%
+// resizing below FHD breakpoint (1407 px):
+@media (max-width: 1407px)
+  .container.landing_leaderboard
+    background-position: 520px -200px
+  p.text-default-small
+    width: 120%
 
 //mobile styling (below 768px)
 @media (max-width: 768px)
   .text-default-small
-    width: 75%
-    margin-left: 23%
+    width: 30%
+
   .button.domain_button
     font-size: 100%
     width: 25%
@@ -262,16 +252,3 @@ button.simple_button
     height: auto
   .container.landing_leaderboard
     background-image: none
-
-
-// resizing past normal breakpoints, prevents large text
-@media (min-width: 1200px)
-  .text-default-small
-    font-size: 100%
-
-// resizing at FHD breakpoint (1407 px):
-@media (max-width: 1407px)
-  .container.landing_leaderboard
-    background-position: 520px -200px
-  p.text-default-small
-    width: 120%
